--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -23,6 +23,9 @@ jobs:
       - name: Install dependencies
         run: yarn install
         
+      - name: Created .env file
+        run: cp .env.example .env
+        
       - name: Run Tests
         run: yarn test
       
